--- a/play.html
+++ b/play.html
@@ -73,17 +73,17 @@
   <div id='contentDiv' style="width: 79%; float: left;">
 
     <details open id='playerD' style="position: fixed;width: 50vw;">
-      <summary>player</summary>
+      <summary>player
 
       <button id='showAllVTTB' onclick="showAllVTT()">show all vtt</button>
       width(1~100vw):
       <input type="range" value="50" autocomplete="off" onchange="videoResize(this.value)">
       <!-- left:
       <input type="range" onchange="playerD.style.left=this.value+'%'" value="0" value="30"> -->
+    </summary>
 
 
-
-      <br>
+       
       <!--  -->
       <video id='video' controls style="max-height: 95vh;width: 100%;">
 
